[tool.poetry]
name = "python-diagrams"
version = "0.1.0"
description = "Sandbox for showing python diagram examples."
authors = ["Sean Wesenberg <wookets@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
